cncProd/force-app/main/default/objects/Account/fields/Char18Id__c.field-meta.xml
<CustomField>
    <fullName>Char18Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Char18Id</label>
    <type>Text</type>
</CustomField>