cncProd/force-app/main/default/objects/Account/fields/HasOptedOutFromEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutFromEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Opt Out Check Box from Saleswhale</description>
    <inlineHelpText>Checked = Unsubscribed</inlineHelpText>
    <label>HasOptedOutFromEmail</label>
    <type>Checkbox</type>
</CustomField>