cncProd/force-app/main/default/objects/Account/fields/Is_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of Primary Account that used for merging
Customer Unique Key : Email</description>
    <inlineHelpText>Indicator of Primary Account that used for merging</inlineHelpText>
    <label>Is Primary Account ?</label>
    <type>Checkbox</type>
</CustomField>