cncProd/force-app/main/default/objects/Account/fields/Primary_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_ID__c</fullName>
    <inlineHelpText>Primary Account ID which will be used for merging</inlineHelpText>
    <label>Primary Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>