cncProd/force-app/main/default/objects/Account/recordTypes/Fleet.recordType-meta.xml
<RecordType>
    <fullName>Fleet</fullName>
    <active>false</active>
    <description>Business Account Fleet</description>
    <label>Fleet</label>
</RecordType>