cncProd/force-app/main/default/objects/Account/recordTypes/Leasing.recordType-meta.xml
<RecordType>
    <fullName>Leasing</fullName>
    <active>false</active>
    <description>Business Account Leasing</description>
    <label>Leasing</label>
</RecordType>